manifests/ml-platform/app-aflow-airflow-scheduler-6f9c44866d-pvcwk.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    checksum/configmap: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu, memory request for container
      git-sync; cpu, memory limit for container git-sync; cpu, memory request for
      container airflow-scheduler; cpu, memory limit for container airflow-scheduler;
      cpu, memory request for init container waifordatabase; cpu, memory limit for
      init container waifordatabase'
  creationTimestamp: "2022-07-17T20:05:14Z"
  generateName: app-aflow-airflow-scheduler-6f9c44866d-
  labels:
    app.kubernetes.io/component: scheduler
    app.kubernetes.io/instance: app-aflow
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: airflow
    component.opendatahub.io/name: airflow2
    helm.sh/chart: airflow-10.3.2
    opendatahub.io/component: "false"
    pod-template-hash: 6f9c44866d
  name: app-aflow-airflow-scheduler-6f9c44866d-pvcwk
  namespace: ml-workshop
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: app-aflow-airflow-scheduler-6f9c44866d
    uid: 00afb7aa-26b5-4d7e-9fea-db753b8159d3
  resourceVersion: "12260"
  uid: 072de659-e7ec-4fec-9891-02daab5b306a
spec:
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - podAffinityTerm:
          labelSelector:
            matchLabels:
              app.kubernetes.io/component: scheduler
              app.kubernetes.io/instance: app-aflow
              app.kubernetes.io/name: airflow
              component.opendatahub.io/name: airflow2
              opendatahub.io/component: "false"
          namespaces:
          - ml-workshop
          topologyKey: kubernetes.io/hostname
        weight: 1
  containers:
  - command:
    - /git-sync
    env:
    - name: GIT_SYNC_REPO
      value: https://github.com/airflow-dags/dags/
    - name: GIT_SYNC_DEST
      value: gitdags
    - name: GIT_SYNC_BRANCH
      value: main
    - name: GIT_SYNC_ROOT
      value: /tmp/git
    - name: GIT_SYNC_ONE_TIME
      value: "false"
    - name: GIT_SYNC_REV
    - name: HOME
      value: /tmp
    image: k8s.gcr.io/git-sync/git-sync:v3.2.2
    imagePullPolicy: Always
    name: git-sync
    ports:
    - containerPort: 2020
      name: gitsync
      protocol: TCP
    resources:
      limits:
        cpu: "1"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 500Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /tmp/git
      name: dags-data
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-xz2mc
      readOnly: true
  - env:
    - name: AIRFLOW_FERNET_KEY
      valueFrom:
        secretKeyRef:
          key: airflow-fernetKey
          name: app-aflow-airflow
    - name: AIRFLOW_LOAD_EXAMPLES
      value: "no"
    - name: AIRFLOW_DATABASE_NAME
      value: bitnami_airflow
    - name: AIRFLOW_DATABASE_USERNAME
      value: bn_airflow
    - name: AIRFLOW_DATABASE_PASSWORD
      valueFrom:
        secretKeyRef:
          key: postgresql-password
          name: app-aflow-postgresql
    - name: AIRFLOW_DATABASE_HOST
      value: app-aflow-postgresql
    - name: AIRFLOW_DATABASE_PORT_NUMBER
      value: "5432"
    - name: REDIS_HOST
      value: app-aflow-redis-master
    - name: REDIS_PORT_NUMBER
      value: "6379"
    - name: REDIS_PASSWORD
      valueFrom:
        secretKeyRef:
          key: redis-password
          name: app-aflow-redis
    - name: AIRFLOW_EXECUTOR
      value: CeleryExecutor
    - name: AIRFLOW_WEBSERVER_HOST
      value: app-aflow-airflow
    - name: AIRFLOW_WEBSERVER_PORT_NUMBER
      value: "8080"
    - name: AIRFLOW__WEBSERVER__SECRET_KEY
      value: IKnowWhatYouDidLastYear
    - name: AIRFLOW_BASE_URL
      value: http://127.0.0.1:8080
    - name: AIRFLOW_LDAP_ENABLE
      value: "no"
    - name: AIRFLOW__WEBSERVER__SECRET_KEY
      value: IKnowWhatYouDidLastYear
    image: quay.io/ml-on-k8s/airflow:2.0.0.scheduler
    imagePullPolicy: Always
    name: airflow-scheduler
    ports:
    - containerPort: 8793
      name: task-logs
      protocol: TCP
    resources:
      limits:
        cpu: "1"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 500Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /opt/bitnami/airflow/dags
      name: dags-data
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-xz2mc
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  initContainers:
  - command:
    - sh
    - -c
    - until nslookup app-aflow-postgresql.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local;
      do echo waiting for airflow db service; sleep 5; done
    image: registry.access.redhat.com/rhscl/postgresql-96-rhel7:latest
    imagePullPolicy: Always
    name: waifordatabase
    resources:
      limits:
        cpu: "1"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 500Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-xz2mc
      readOnly: true
  nodeName: k8s-mlops
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - emptyDir: {}
    name: dags-data
  - name: kube-api-access-xz2mc
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T20:11:00Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T21:10:59Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T21:10:59Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T20:05:14Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://fc545c922c28518a829a16a1807886beace1bd90312358e067af3a87a052abc8
    image: quay.io/ml-on-k8s/airflow:2.0.0.scheduler
    imageID: docker-pullable://quay.io/ml-on-k8s/airflow@sha256:ffe9714b4fedd3fb4e45b59a6831c4980e30b5c27956bfb3ca610d2c3a312539
    lastState: {}
    name: airflow-scheduler
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-07-17T21:10:58Z"
  - containerID: docker://4c6f79845e2d489405467a5c3e4fa06a071800a734ee0fbbdf38abea75aecfba
    image: k8s.gcr.io/git-sync/git-sync:v3.2.2
    imageID: docker-pullable://k8s.gcr.io/git-sync/git-sync@sha256:6a543fb2d1e92008aad697da2672478dcfac715e3dddd33801d772da6e70cf24
    lastState: {}
    name: git-sync
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-07-17T20:27:55Z"
  hostIP: 192.168.64.31
  initContainerStatuses:
  - containerID: docker://639052ecf33b1d68864f77d588c0376bf805b6e11e0d6ce0d13f8409c103698c
    image: registry.access.redhat.com/rhscl/postgresql-96-rhel7:latest
    imageID: docker-pullable://registry.access.redhat.com/rhscl/postgresql-96-rhel7@sha256:6c3090779c0553d773380ff4cb0532086075376964de398417d494313f9a933b
    lastState: {}
    name: waifordatabase
    ready: true
    restartCount: 0
    state:
      terminated:
        containerID: docker://639052ecf33b1d68864f77d588c0376bf805b6e11e0d6ce0d13f8409c103698c
        exitCode: 0
        finishedAt: "2022-07-17T20:10:59Z"
        reason: Completed
        startedAt: "2022-07-17T20:10:59Z"
  phase: Running
  podIP: 172.17.0.21
  podIPs:
  - ip: 172.17.0.21
  qosClass: Burstable
  startTime: "2022-07-17T20:05:14Z"
