manifests/ml-platform/app-aflow-airflow-web-6698ddd894-xw68r.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    checksum/configmap: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu, memory request for container
      git-sync; cpu, memory limit for container git-sync; cpu, memory request for
      container airflow-web; cpu, memory limit for container airflow-web; cpu, memory
      request for init container waifordatabase; cpu, memory limit for init container
      waifordatabase'
  creationTimestamp: "2022-07-17T20:15:52Z"
  generateName: app-aflow-airflow-web-6698ddd894-
  labels:
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: app-aflow
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: airflow
    component.opendatahub.io/name: airflow2
    helm.sh/chart: airflow-10.3.2
    opendatahub.io/component: "false"
    pod-template-hash: 6698ddd894
  name: app-aflow-airflow-web-6698ddd894-xw68r
  namespace: ml-workshop
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: app-aflow-airflow-web-6698ddd894
    uid: dec36c59-f133-468c-85cb-fbe8892ea02e
  resourceVersion: "12319"
  uid: 828a7761-2b1b-44e9-bd6f-5d51d1a4042a
spec:
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - podAffinityTerm:
          labelSelector:
            matchLabels:
              app.kubernetes.io/component: web
              app.kubernetes.io/instance: app-aflow
              app.kubernetes.io/name: airflow
              component.opendatahub.io/name: airflow2
              opendatahub.io/component: "false"
          namespaces:
          - ml-workshop
          topologyKey: kubernetes.io/hostname
        weight: 1
  containers:
  - command:
    - /git-sync
    env:
    - name: GIT_SYNC_REPO
      value: https://github.com/airflow-dags/dags/
    - name: GIT_SYNC_DEST
      value: gitdags
    - name: GIT_SYNC_BRANCH
      value: main
    - name: GIT_SYNC_ROOT
      value: /tmp/git
    - name: GIT_SYNC_ONE_TIME
      value: "false"
    - name: GIT_SYNC_REV
    - name: HOME
      value: /tmp
    image: k8s.gcr.io/git-sync/git-sync:v3.2.2
    imagePullPolicy: Always
    name: git-sync
    ports:
    - containerPort: 2020
      name: gitsync
      protocol: TCP
    resources:
      limits:
        cpu: "1"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 500Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /tmp/git
      name: dags-data
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-4zt88
      readOnly: true
  - env:
    - name: AIRFLOW_FERNET_KEY
      valueFrom:
        secretKeyRef:
          key: airflow-fernetKey
          name: app-aflow-airflow
    - name: AIRFLOW_LOAD_EXAMPLES
      value: "no"
    - name: AIRFLOW_DATABASE_NAME
      value: bitnami_airflow
    - name: AIRFLOW_DATABASE_USERNAME
      value: bn_airflow
    - name: AIRFLOW_DATABASE_PASSWORD
      valueFrom:
        secretKeyRef:
          key: postgresql-password
          name: app-aflow-postgresql
    - name: AIRFLOW_DATABASE_HOST
      value: app-aflow-postgresql
    - name: AIRFLOW_DATABASE_PORT_NUMBER
      value: "5432"
    - name: REDIS_HOST
      value: app-aflow-redis-master
    - name: REDIS_PORT_NUMBER
      value: "6379"
    - name: REDIS_PASSWORD
      valueFrom:
        secretKeyRef:
          key: redis-password
          name: app-aflow-redis
    - name: AIRFLOW_EXECUTOR
      value: CeleryExecutor
    - name: AIRFLOW_WEBSERVER_HOST
      value: 0.0.0.0
    - name: AIRFLOW_WEBSERVER_PORT_NUMBER
      value: "8080"
    - name: AIRFLOW__WEBSERVER__RBAC
      value: "False"
    - name: AIRFLOW__WEBSERVER__AUTHENTICATE
      value: "False"
    - name: AIRFLOW_USERNAME
      value: user
    - name: AIRFLOW_PASSWORD
      valueFrom:
        secretKeyRef:
          key: airflow-password
          name: app-aflow-airflow
    - name: AIRFLOW_BASE_URL
      value: http://127.0.0.1:8080
    - name: AIRFLOW_LDAP_ENABLE
      value: "no"
    - name: AIRFLOW__WEBSERVER__SECRET_KEY
      value: IKnowWhatYouDidLastYear
    - name: AUTH_ROLE_PUBLIC
      value: Public
    - name: AUTH_ROLE_PUBLIC
      value: Public
    - name: AIRFLOW__WEBSERVER__ENABLE_PROXY_FIX
      value: "True"
    - name: AIRFLOW__WEBSERVER__ENABLE_PROXY_FIX
      value: "True"
    - name: OAUTH_API_BASE_URL
      value: https://keycloak.minikube.local
    - name: REQUESTS_CA_BUNDLE
    - name: CURL_CA_BUNDLE
    - name: OAUTH_TOKEN_URL
      value: https://keycloak.minikube.local/auth/realms/master/protocol/openid-connect/token
    - name: OAUTH_AUTHORIZE_URL
      value: https://keycloak.minikube.local/auth/realms/master/protocol/openid-connect/auth
    - name: CLIENT_ID
      value: aflow
    - name: CLIENT_SECRET
      value: efbb6591-86d0-4270-a544-f47689460a85
    - name: AIRFLOW_NAMESPACE
      value: ml-workshop
    - name: SA_SECRET_KEY
      valueFrom:
        secretKeyRef:
          key: token
          name: airflow2-proxy
    image: quay.io/ml-on-k8s/airflow:2.1.7.web.keycloak
    imagePullPolicy: Always
    livenessProbe:
      failureThreshold: 6
      initialDelaySeconds: 180
      periodSeconds: 20
      successThreshold: 1
      tcpSocket:
        port: http
      timeoutSeconds: 5
    name: airflow-web
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
    readinessProbe:
      failureThreshold: 6
      initialDelaySeconds: 30
      periodSeconds: 10
      successThreshold: 1
      tcpSocket:
        port: http
      timeoutSeconds: 5
    resources:
      limits:
        cpu: "1"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 500Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /opt/bitnami/airflow/dags
      name: dags-data
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-4zt88
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  initContainers:
  - command:
    - sh
    - -c
    - until nslookup app-aflow-postgresql.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local;
      do echo waiting for airflow db service; sleep 5; done
    image: registry.access.redhat.com/rhscl/postgresql-96-rhel7:latest
    imagePullPolicy: Always
    name: waifordatabase
    resources:
      limits:
        cpu: "1"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 500Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-4zt88
      readOnly: true
  nodeName: k8s-mlops
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: airflow2-proxy
  serviceAccountName: airflow2-proxy
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - emptyDir: {}
    name: dags-data
  - name: kube-api-access-4zt88
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T20:29:58Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T20:15:52Z"
    message: 'containers with unready status: [airflow-web]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T20:15:52Z"
    message: 'containers with unready status: [airflow-web]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T20:15:52Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - image: quay.io/ml-on-k8s/airflow:2.1.7.web.keycloak
    imageID: ""
    lastState: {}
    name: airflow-web
    ready: false
    restartCount: 0
    started: false
    state:
      waiting:
        message: Back-off pulling image "quay.io/ml-on-k8s/airflow:2.1.7.web.keycloak"
        reason: ImagePullBackOff
  - containerID: docker://517204df8d0d8f3561df5e895f81151a1dae5aac92ab8a78ef43e21a04a059f9
    image: k8s.gcr.io/git-sync/git-sync:v3.2.2
    imageID: docker-pullable://k8s.gcr.io/git-sync/git-sync@sha256:6a543fb2d1e92008aad697da2672478dcfac715e3dddd33801d772da6e70cf24
    lastState: {}
    name: git-sync
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-07-17T20:41:43Z"
  hostIP: 192.168.64.31
  initContainerStatuses:
  - containerID: docker://2da0891012699ea2e01845b1cc64281061cacfa74a9bff5e0c2b4c7fc7a0aa82
    image: registry.access.redhat.com/rhscl/postgresql-96-rhel7:latest
    imageID: docker-pullable://registry.access.redhat.com/rhscl/postgresql-96-rhel7@sha256:6c3090779c0553d773380ff4cb0532086075376964de398417d494313f9a933b
    lastState: {}
    name: waifordatabase
    ready: true
    restartCount: 0
    state:
      terminated:
        containerID: docker://2da0891012699ea2e01845b1cc64281061cacfa74a9bff5e0c2b4c7fc7a0aa82
        exitCode: 0
        finishedAt: "2022-07-17T20:29:56Z"
        reason: Completed
        startedAt: "2022-07-17T20:29:55Z"
  phase: Pending
  podIP: 172.17.0.23
  podIPs:
  - ip: 172.17.0.23
  qosClass: Burstable
  startTime: "2022-07-17T20:15:52Z"
