manifests/ml-platform/app-aflow-airflow-worker-0.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    checksum/configmap: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu, memory request for container
      git-sync; cpu, memory limit for container git-sync; cpu, memory request for
      container airflow-worker; cpu, memory limit for container airflow-worker; cpu,
      memory request for init container waifordatabase; cpu, memory limit for init
      container waifordatabase'
  creationTimestamp: "2022-07-17T20:05:14Z"
  generateName: app-aflow-airflow-worker-
  labels:
    app.kubernetes.io/component: worker
    app.kubernetes.io/instance: app-aflow
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: airflow
    component.opendatahub.io/name: airflow2
    controller-revision-hash: app-aflow-airflow-worker-7fd44dbd66
    helm.sh/chart: airflow-10.3.2
    opendatahub.io/component: "false"
    statefulset.kubernetes.io/pod-name: app-aflow-airflow-worker-0
  name: app-aflow-airflow-worker-0
  namespace: ml-workshop
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: StatefulSet
    name: app-aflow-airflow-worker
    uid: 877dcc1d-3305-4115-a2fc-8a3e655ee1f2
  resourceVersion: "12053"
  uid: cd971bb5-22c3-4559-93e4-d34baea558b0
spec:
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - podAffinityTerm:
          labelSelector:
            matchLabels:
              app.kubernetes.io/component: worker
              app.kubernetes.io/instance: app-aflow
              app.kubernetes.io/name: airflow
              component.opendatahub.io/name: airflow2
              opendatahub.io/component: "false"
          namespaces:
          - ml-workshop
          topologyKey: kubernetes.io/hostname
        weight: 1
  containers:
  - command:
    - /git-sync
    env:
    - name: GIT_SYNC_REPO
      value: https://github.com/airflow-dags/dags/
    - name: GIT_SYNC_DEST
      value: gitdags
    - name: GIT_SYNC_BRANCH
      value: main
    - name: GIT_SYNC_ROOT
      value: /tmp/git
    - name: GIT_SYNC_ONE_TIME
      value: "false"
    - name: GIT_SYNC_REV
    - name: HOME
      value: /tmp
    image: k8s.gcr.io/git-sync/git-sync:v3.2.2
    imagePullPolicy: Always
    name: git-sync
    ports:
    - containerPort: 2020
      name: gitsync
      protocol: TCP
    resources:
      limits:
        cpu: "1"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 500Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /tmp/git
      name: dags-data
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-nlnm8
      readOnly: true
  - env:
    - name: AIRFLOW_FERNET_KEY
      valueFrom:
        secretKeyRef:
          key: airflow-fernetKey
          name: app-aflow-airflow
    - name: AIRFLOW_LOAD_EXAMPLES
      value: "no"
    - name: AIRFLOW_DATABASE_NAME
      value: bitnami_airflow
    - name: AIRFLOW_DATABASE_USERNAME
      value: bn_airflow
    - name: AIRFLOW_DATABASE_PASSWORD
      valueFrom:
        secretKeyRef:
          key: postgresql-password
          name: app-aflow-postgresql
    - name: AIRFLOW_DATABASE_HOST
      value: app-aflow-postgresql
    - name: AIRFLOW_DATABASE_PORT_NUMBER
      value: "5432"
    - name: REDIS_HOST
      value: app-aflow-redis-master
    - name: REDIS_PORT_NUMBER
      value: "6379"
    - name: REDIS_PASSWORD
      valueFrom:
        secretKeyRef:
          key: redis-password
          name: app-aflow-redis
    - name: AIRFLOW_EXECUTOR
      value: CeleryExecutor
    - name: AIRFLOW_WEBSERVER_HOST
      value: app-aflow-airflow
    - name: AIRFLOW_WEBSERVER_PORT_NUMBER
      value: "8080"
    - name: AIRFLOW__WEBSERVER__SECRET_KEY
      value: IKnowWhatYouDidLastYear
    image: quay.io/ml-on-k8s/airflow:2.0.0.worker
    imagePullPolicy: Always
    livenessProbe:
      failureThreshold: 6
      initialDelaySeconds: 180
      periodSeconds: 20
      successThreshold: 1
      tcpSocket:
        port: worker
      timeoutSeconds: 5
    name: airflow-worker
    ports:
    - containerPort: 8793
      name: worker
      protocol: TCP
    readinessProbe:
      failureThreshold: 6
      initialDelaySeconds: 30
      periodSeconds: 10
      successThreshold: 1
      tcpSocket:
        port: worker
      timeoutSeconds: 5
    resources:
      limits:
        cpu: "1"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 500Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /opt/bitnami/airflow/dags
      name: dags-data
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-nlnm8
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  hostname: app-aflow-airflow-worker-0
  initContainers:
  - command:
    - sh
    - -c
    - until nslookup app-aflow-postgresql.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local;
      do echo waiting for airflow db service; sleep 5; done
    image: registry.access.redhat.com/rhscl/postgresql-96-rhel7:latest
    imagePullPolicy: Always
    name: waifordatabase
    resources:
      limits:
        cpu: "1"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 500Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-nlnm8
      readOnly: true
  nodeName: k8s-mlops
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  subdomain: app-aflow-airflow-worker-headless
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - emptyDir: {}
    name: dags-data
  - name: kube-api-access-nlnm8
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T20:10:59Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T20:05:14Z"
    message: 'containers with unready status: [airflow-worker]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T20:05:14Z"
    message: 'containers with unready status: [airflow-worker]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T20:05:14Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - image: quay.io/ml-on-k8s/airflow:2.0.0.worker
    imageID: ""
    lastState: {}
    name: airflow-worker
    ready: false
    restartCount: 0
    started: false
    state:
      waiting:
        message: Back-off pulling image "quay.io/ml-on-k8s/airflow:2.0.0.worker"
        reason: ImagePullBackOff
  - containerID: docker://940a11489a8298787d68fbd09e00ef108a055e0dfd0eeb15d64d84b086546d3c
    image: k8s.gcr.io/git-sync/git-sync:v3.2.2
    imageID: docker-pullable://k8s.gcr.io/git-sync/git-sync@sha256:6a543fb2d1e92008aad697da2672478dcfac715e3dddd33801d772da6e70cf24
    lastState: {}
    name: git-sync
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-07-17T20:27:55Z"
  hostIP: 192.168.64.31
  initContainerStatuses:
  - containerID: docker://b719255cda2c4ef36b8e56401774a49360237452c7bcdf5ae536b7ea8e13b6a2
    image: registry.access.redhat.com/rhscl/postgresql-96-rhel7:latest
    imageID: docker-pullable://registry.access.redhat.com/rhscl/postgresql-96-rhel7@sha256:6c3090779c0553d773380ff4cb0532086075376964de398417d494313f9a933b
    lastState: {}
    name: waifordatabase
    ready: true
    restartCount: 0
    state:
      terminated:
        containerID: docker://b719255cda2c4ef36b8e56401774a49360237452c7bcdf5ae536b7ea8e13b6a2
        exitCode: 0
        finishedAt: "2022-07-17T20:10:58Z"
        reason: Completed
        startedAt: "2022-07-17T20:10:58Z"
  phase: Pending
  podIP: 172.17.0.22
  podIPs:
  - ip: 172.17.0.22
  qosClass: Burstable
  startTime: "2022-07-17T20:05:14Z"
