manifests/ml-platform/app-aflow-postgresql-0.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu, memory limit for container
      app-aflow-postgresql'
  creationTimestamp: "2022-07-17T20:05:14Z"
  generateName: app-aflow-postgresql-
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: app-aflow
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    component.opendatahub.io/name: airflow2
    controller-revision-hash: app-aflow-postgresql-d7bb7d766
    helm.sh/chart: postgresql-10.9.4
    opendatahub.io/component: "false"
    role: primary
    statefulset.kubernetes.io/pod-name: app-aflow-postgresql-0
  name: app-aflow-postgresql-0
  namespace: ml-workshop
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: StatefulSet
    name: app-aflow-postgresql
    uid: 8d625e76-ceeb-4477-b74c-5d3f2aaf5a86
  resourceVersion: "8609"
  uid: d576ced7-e3d2-4929-ac91-0eb62593c27f
spec:
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - podAffinityTerm:
          labelSelector:
            matchLabels:
              app.kubernetes.io/component: primary
              app.kubernetes.io/instance: app-aflow
              app.kubernetes.io/name: postgresql
              component.opendatahub.io/name: airflow2
              opendatahub.io/component: "false"
          namespaces:
          - ml-workshop
          topologyKey: kubernetes.io/hostname
        weight: 1
  automountServiceAccountToken: false
  containers:
  - env:
    - name: POSTGRESQL_ADMIN_PASSWORD
      valueFrom:
        secretKeyRef:
          key: postgresql-postgres-password
          name: app-aflow-postgresql
    - name: POSTGRESQL_USER
      value: bn_airflow
    - name: POSTGRESQL_PASSWORD
      valueFrom:
        secretKeyRef:
          key: postgresql-password
          name: app-aflow-postgresql
    - name: POSTGRESQL_DATABASE
      value: bitnami_airflow
    image: quay.io/internaldatahub/postgresql-96-centos7:9.6
    imagePullPolicy: Always
    livenessProbe:
      failureThreshold: 6
      initialDelaySeconds: 60
      periodSeconds: 10
      successThreshold: 1
      tcpSocket:
        port: 5432
      timeoutSeconds: 5
    name: app-aflow-postgresql
    ports:
    - containerPort: 5432
      name: tcp-postgresql
      protocol: TCP
    readinessProbe:
      failureThreshold: 6
      initialDelaySeconds: 60
      periodSeconds: 10
      successThreshold: 1
      tcpSocket:
        port: 5432
      timeoutSeconds: 5
    resources:
      limits:
        cpu: "1"
        memory: 1Gi
      requests:
        cpu: 250m
        memory: 256Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/lib/pgsql/data
      name: aflow-data
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  hostname: app-aflow-postgresql-0
  nodeName: k8s-mlops
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext:
    fsGroup: 1000630000
  serviceAccount: default
  serviceAccountName: default
  subdomain: app-aflow-postgresql-headless
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: aflow-data
    persistentVolumeClaim:
      claimName: aflow-data-app-aflow-postgresql-0
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T20:05:16Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T20:39:26Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T20:39:26Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-07-17T20:05:16Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://f483d40ccb4133a37abd79939eddf3e1b3a3a5af651ecbda3e23f954bc223ebb
    image: quay.io/internaldatahub/postgresql-96-centos7:9.6
    imageID: docker-pullable://quay.io/internaldatahub/postgresql-96-centos7@sha256:a3a593fc017b8a362f54e240e8cee6c3bdab3757542186180f6312671938bbd6
    lastState: {}
    name: app-aflow-postgresql
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-07-17T20:38:21Z"
  hostIP: 192.168.64.31
  phase: Running
  podIP: 172.17.0.31
  podIPs:
  - ip: 172.17.0.31
  qosClass: Burstable
  startTime: "2022-07-17T20:05:16Z"
